# bitdoku

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  vcpkg.json
archive/: CMakeLists.txt
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: bitdoku.cpp  bitdoku.hpp  bitdoku.ixx  bitdoku_gui.cpp  bitdoku_gui.hpp  gui_exe.cpp  igui.cpp  lib.cpp  lib.hpp  main.cpp  utils.ixx
source/modules/: CMakeLists.txt
source/modules/cppcoro/: cppcoro.hpp  cppcoro.ixx
source/modules/fmt/: fmt.hpp  fmt.ixx
source/modules/gui/: gui.hpp  gui.ixx
source/modules/stl/: stl.hpp  stl.ixx
src/: bitdoku.ixx  main.cpp
test/: CMakeLists.txt
test/source/: bitdoku_test.cpp  jsolv.c  jsolv.h
